fix: Change heading spacing depending on menu

--- a/components/css/buckyless/header.less
+++ b/components/css/buckyless/header.less
@@ -44,19 +44,6 @@ portal-header {
       max-height: 56px;
       overflow-y: hidden;
 
-      .title-link {
-        h1 {
-          @media (min-width: @xs) {
-            margin-left: 16px;
-          }
-        }
-
-        img {
-          height: 56px;
-          margin-right: 8px;
-        }
-      }
-
       .md-menu {
         > .md-button {
           min-width: 48px;
@@ -64,9 +51,29 @@ portal-header {
         }
       }
 
+      .title-link img {
+        max-height: 40px;
+        line-height: 56px;
+        margin-left: 8px;
+      }
+
       .menu-toggle.md-button {
         min-width: 48px;
         margin: 0;
+
+        + .title-link h1 {
+          @media (min-width: @xs) {
+            margin-left: 0;
+          }
+        }
+
+        &.hide-gt-xs {
+          + .title-link h1 {
+            @media (min-width: @xs) {
+              margin-left: 16px;
+            }
+          }
+        }
       }
 
       .top-bar-controls-xs {
